# audio-recognize

./: CMakeLists.txt  README.md  Train.cpp
Audio.bundle/Contents/: Info.plist
Audio.bundle/Contents/MacOS/: Audio
CXYNN/: .MaxPoolLayer.cpp.swp  CMakeLists.txt  Makefile  Optimizer.cpp  cmake_install.cmake  config.h
CXYNN/cuda/: Makefile  cmake_install.cmake
Release/: Audio.exp  Audio.lib
compute-mfcc/: CMakeCache.txt  CMakeLists.txt  Makefile  Mfcc.h  cmake_install.cmake  compute-mfcc.cc  mfcc  mfcc.cc  wavHeader.h
debug/: Audio  train_backup
